# hello-world

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-python.yml  build.yml  test-python.yml
docker/: Dockerfile  build.sh
docs/source/: conf.py  index.rst
hello_world.egg-info/: PKG-INFO  SOURCES.txt
src/: hello_world.py
tests/: test_hello_world.py
