[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.poetry]
name = "hello"
version = "1.0.0"
description = "description"
authors = ["DW <dong@toggle.ai>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
coverage= "7.3.2"

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^7.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
sphinx = "^6.1.3"
py-clients = { git = "git@github.com:toggleglobal/py-clients.git", branch="main" }
